# cpp-gtest-allure-utilities

./: CMakeLists.txt  CMakePresets.json  build.sh  conanfile.py
.github/workflows/: build-and-publish.yml
ci/pipelines/: Build.jenkinsfile  Release.jenkinsfile
src/GTestAllureUtilities/: Allure2Listener.cpp  Allure2Listener.h  AllureAPI.cpp  AllureAPI.h  CMakeLists.txt  build.sh
src/GTestAllureUtilities/Model/: TestCase.cpp  TestCase.h
src/GTestAllureUtilities/RapidJSONAdapter/: CMakeLists.txt  JSONSchemaValidator.cpp
src/GTestAllureUtilities/Services/: ServicesFactory.cpp
src/GTestAllureUtilities/Services/EventHandlers/: ITestCaseEndEventHandler.h  ITestStepEndEventHandler.h  ITestSuiteEndEventHandler.h  TestProgramEndEventHandler.cpp
src/GTestAllureUtilities/Services/GoogleTest/: GTestEventListener.h  IGTestStatusChecker.h
src/GTestAllureUtilities/Services/Report/: TestProgramJSONBuilder.cpp  TestProgramJSONBuilder.h  TestSuiteJSONSerializer.cpp  TestSuiteJSONSerializer.h
src/GTestAllureUtilities/cmake/: GTestAllureUtilitiesConfig.cmake
src/GTestAllureUtilities/interfaces/: CMakeLists.txt
test/IntegrationTest/: CMakeLists.txt
test/IntegrationTest/Tests/: BaseIntegrationTest.h
test/SampleTestProject/: CMakeLists.txt
test/TestUtilities/: CMakeLists.txt
test/TestUtilities/Mocks/Services/Report/: MockTestProgramJSONBuilder.h  MockTestSuiteJSONSerializer.h
test/TestUtilities/Stubs/Services/: StubEventListener.h  StubServicesFactory.cpp  StubServicesFactory.h
test/UnitTest/: CMakeLists.txt
test/UnitTest/Tests/Services/EventHandlers/: TestCaseEndEventHandlerTest.cpp  TestCaseStartEventHandlerTest.cpp  TestProgramEndEventHandlerTest.cpp  TestProgramStartEventHandlerTest.cpp  TestStepEndEventHandlerTest.cpp  TestStepStartEventHandlerTest.cpp  TestSuiteEndEventHandlerTest.cpp  TestSuiteStartEventHandlerTest.cpp
test/UnitTest/Tests/Services/Property/: TestCasePropertySetterTest.cpp  TestSuitePropertySetterTest.cpp
test/UnitTest/Tests/Services/Report/: TestProgramJSONBuilderTest.cpp  TestSuiteJSONSerializerTest.cpp
